# python-project-template

./: .editorconfig  .gitignore  .ppt-version  .travis.yml  CHANGELOG.md  GENERATE.py  LICENSE  LICENSE.md  LICENSE.this-template-project  LICENSE.tpl  MANIFEST.in  Pipfile  README.md  README.rst  pavement.py.tpl  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup.py.tpl  tox.ini
docs/: Makefile.tpl  make.bat.tpl
docs/source/: README  README.tpl  conf.py  conf.py.tpl  index.rst.tpl  todo.rst
internal/: generate.py  run_diff3_git.py  test.py  test.sh  update_existing_ppt_project.py
my_module/: __init__.py  __init__.py.tpl  main.py  main.py.tpl  metadata.py
requirements/: all.txt  dev.txt  run.txt  test.txt
scripts/: my_module_runner
src/my_package/: __init__.py
tests/: test_main.py.tpl
