[metadata]
name = my_package
version = attr: my_package.VERSION
description = My package description
long_description = file: README.md, CHANGELOG.md, LICENSE.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/sh1457/my_package
author = Sujith Sudarshan
author_email = sh1457@gmail.com
license = MIT
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
project_urls = 
    Source = https://github.com/sh1457/my_package

[options]
zip_safe = False
package_dir=
    =src
packages = find:
platforms = any
include_package_data = True
install_requires =
    pandas
python_requires = >=3.9

[options.package_data]
* = *.txt, *.rst

#[options.entry_points]
#console_scripts =
#    executable-name = my_package.module:function

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    my_package.tests*

[options.extras_require]
dev =
    pytest
    pytest-cov
    coverage
    black
    mypy